# 155-miniproject-2

./: .gitignore  pyproject.toml  verify_inference.ipynb
code/data/: base.py  dataloader.py
code/model/: adapter.py  checkpointing.py  gemma3.py
src/config/: gemma3_270M.yaml
src/data/: base.py  dataloader.py  utils.py
src/frontend/: html_generator.py  html_visualizer.py
src/model/: __init__.py  base.py  checkpointing.py
src/utils/: __init__.py  code.py
