[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proj"
version = "0.0.1"
dependencies = [
    "jaxtyping",
    "numpy",
    "torch",
    "jax",
    "flax",
    "omegaconf",
    "orbax-checkpoint",
    "einops",
    "decord",
    "gdown",
    "hydra-core",
    "gemma",
    "tensorflow",
    "keras",
    "absl-py",
    "av",
    "matplotlib",
    "scikit-learn",
]